# Creador_videos_v2

./: .env.example  .gitignore  GUIA_CONEXION_ANTIGRAVITY.md  LICENSE  README.md  SETUP.md  make_queue_config.json  mcp_config.json  menu.sh  pyproject.toml
assets/intros/: Intro_1.txt  Intro_10.txt  Intro_2.txt  Intro_3.txt  Intro_4.txt  Intro_5.txt  Intro_6.txt  Intro_7.txt  Intro_8.txt  Intro_9.txt
assets/outros/: Outro_1.txt  Outro_10.txt  Outro_2.txt  Outro_3.txt  Outro_4.txt  Outro_5.txt  Outro_6.txt  Outro_7.txt  Outro_8.txt  Outro_9.txt
config/: prompts.yaml  sources.yaml
legacy/: README.md  menu.sh  pyproject.toml  setup.sh
legacy/src/: __init__.py  main.py  pipeline.py
legacy/src/llm/: __init__.py  hooks.py  openrouter.py  validator.py
legacy/src/mindfulness/: ffmpeg_utils.py  package-lock.json  package.json  pipeline.py  render_art.js  render_canvas.js  render_p5.js  sticker_analyzer.py  sticker_fetcher.py  sticker_overlay.py
legacy/src/publisher/: __init__.py
legacy/src/scraper/: __init__.py  reddit.py  rss.py  youtube.py
legacy/src/tts/: __init__.py  edge_tts.py
legacy/src/utils/: __init__.py  backoff.py  cache.py
legacy/src/video/: __init__.py
scripts/: generate_subtitle_files.py  setup_make_queue.py  transcribe_assets.py
src/: __init__.py  check_hardware.py  main.py  orchestrator.py  pipeline.py
src/audio/: engine.py
src/director/: parser.py
src/domain/: models.py
src/infrastructure/: compositor.py  pexels.py
src/llm/: __init__.py  scene_generator.py
src/publisher/: cloud_uploader.py  make_webhook.py  retry_queue.py
src/scraper/: blogs.py  youtube.py
src/tts/: edge_tts.py  xtts.py
src/utils/: cache.py
src/video/: pexels.py  renderer.py  subtitles.py
tests/: test_webhook_upload.py  verify_video_repair.py  verify_webhook_payload.py
