[project]
name = "creador-videos-v3"
version = "3.0.0"
description = "Motor de generación de videos V3 con Sincronización de Audio (Whisper) y Arquitectura de Escenas."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pablo", email = "pablo@example.com"}
]

dependencies = [
    # Core AI & Audio
    "openai-whisper>=20231117",  # Sincronización precisa
    "torch>=2.0.0",              # Backend para Whisper
    
    # Architecture & Data
    "pydantic>=2.0.0",           # Validación de datos estricta
    "python-dotenv>=1.0.0",      # Configuración
    
    # CLI & UI
    "rich>=13.0.0",              # Interfaz bonita
    "typer>=0.9.0",              # CLI moderno
    
    # Infrastructure
    "httpx>=0.27.0",             # Cliente HTTP moderno
    "tenacity>=8.2.0",           # Reintentos robustos
    
    # Video Processing (Future Phase 3)
    # Video Processing
    "moviepy>=1.0.3",   
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
